--- a/style.css
+++ b/style.css
@@ -4,7 +4,13 @@
 }
 
 .imgPortada {
-    padding-top: 3%;
+    padding-top: 8%;
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    .imgPortada {
+        padding-top: 15%;
+    }
 }
 
 h1 {
@@ -23,11 +29,99 @@ h1 {
     justify-content: center;
 }
 
-#preguntas {
-    padding: 3%;
+
+h2 h3 h4 {
+    font-family: "Fjalla One" !important;
 }
 
-.preguntas {
+
+#preguntas {
+    padding: 3%;
     justify-content: center;
+    padding-top: 6%;
 }
+
+.llaveEnmano {
+    font-family: "Roboto Slab";
+    padding-top: 3%;
+}
+
+.listaLlavemano {
+    width: 70%;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+@media screen and (min-width: 320px) and (max-width: 680px) {
+    .listaLlavemano {
+        width: 95%;
+    }
+}
+
+.llaveEnmano ul {
+    list-style: none;
+    padding-left: 0%;
+}
+
+.llaveEnmano ul li {
+    padding-bottom: 7px;
+}
+
+.imgLlaveEnmano {
+    border-radius: 10px;
+    margin-bottom: 3%;
+}
+
+.obraGris {
+    margin-top: 6%;
+}
+
+.imgObragris {
+    border-radius: 10px;
+    margin-bottom: 3%;
+}
+
+.listaObragris {
+    width: 70%;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+@media screen and (min-width: 320px) and (max-width: 680px) {
+    .listaObragris {
+        width: 95%;
+    }
+}
+
+.listaObragris ul {
+    list-style: none;
+    padding-left: 0%;
+}
+
+.listaObragris ul li {
+    padding-bottom: 7px;
+}
+
+footer ul {
+    list-style: none;
+    padding-left: 0%;
+}
+
+footer ul li{
+    padding-bottom: 10px;
+}
+
+footer {
+    padding-top: 5%;
+}
+
+.imgRedes {
+    width: 50px;
+    height: auto;
+}
+
+#contactar {
+    font-size: 25px;
+}
+
 
