--- a/style.css
+++ b/style.css
@@ -3,8 +3,16 @@
     margin: 0;
 }
 
+.encabezado {
+    background-color: #edebc9;
+}
+
 .imgPortada {
     padding-top: 8%;
+}
+
+.encabezado p {
+    font-family: "Roboto Slab";
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -39,6 +47,16 @@ h2 h3 h4 {
     padding: 3%;
     justify-content: center;
     padding-top: 6%;
+    font-family: "Roboto Slab";
+}
+
+.rounded-start {
+    border-bottom-right-radius: var(--bs-border-radius)!important;
+    border-top-right-radius: var(--bs-border-radius)!important;
+}
+
+#servicios {
+    background-color: #edebc9;
 }
 
 .llaveEnmano {
@@ -122,6 +140,10 @@ footer {
 
 #contactar {
     font-size: 25px;
+}
+
+#contactar a {
+    text-decoration: none;
 }
 
 
